--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -8,7 +8,7 @@
   <%= f.input :main_language %>
   <%= f.submit class: "btn btn-primary" %>
 <% end %>
-<%= link_to "Cancel", countries_path, class:"btn btn-danger"%>
+<%= link_to "Cancel", countries_path, class: "btn btn-secondary"%>
 
 </div>
 
