--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -17,8 +17,8 @@
              data-daterange-target="input"
              class="form-control"
              placeholder="Select a date range" />
+    <%= f.button :submit, "Book now", class: "btn btn-primary mt-4"%>
     </div>
-    <%= f.button :submit, "Book now", class: "btn btn-primary" %>
   <% end %>
   </div>
   </div>
