--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -11,3 +11,4 @@
 @import "components/index";
 @import "pages/index";
 @import "flatpickr/dist/flatpickr.min.css";
+@import "components/my_bookings_card";
