--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -9,6 +9,8 @@
       <h2>Booking Details</h2>
       <p><strong>Check-in:</strong> <%= @booking.start_date %></p>
       <p><strong>Check-out:</strong> <%= @booking.end_date %></p>
+      <p><strong>Price per night:</strong> <%= @booking.country.price %></p>
+      <p><strong>Number of nights:</strong> <%= @booking.nights %></p>
       <p><strong>Total Price:</strong> $<%= @booking.total_price%></p>
     </div>
 
