--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,19 +1,13 @@
-<nav class="navbar navbar-expand-lg navbar-light navbar-lewagon">
-  <div class="container-fluid">
-    <%= link_to "AirCnC", root_path, class: "navbar-brand fw-bold" %>
+<div class="navbar navbar-light navbar-lewagon">
+  <div class="container-fluid d-flex justify-content-between align-items-center w-100">
+    <%= link_to root_path, class: "navbar-brand d-flex align-items-center gap-2" do %>
+      <%= image_tag "https://cdn-icons-png.flaticon.com/512/9746/9746676.png", alt: "Logo", height: 30 %>
+      <h2 class="mb-0">AirCnC</h2>
+    <% end %>
 
-    <div class="navbar-collapse collapse">
-      <ul class="navbar-nav ms-auto">
-        <% if user_signed_in? %>
-          <li class="nav-item">
-            <%= link_to "Log out", destroy_user_session_path, method: :delete, data: { turbo: false }, class: "nav-link" %>
-          </li>
-        <% else %>
-          <li class="nav-item">
-            <%= link_to "Log in", new_user_session_path, class: "nav-link" %>
-          </li>
-        <% end %>
-      </ul>
+    <div class="d-flex gap-4">
+      <%= link_to "Home", root_path, class: "nav-link" %>
+      <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
     </div>
   </div>
-</nav>
+</div>
