additional styling and funcionality for the demo

--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -10,7 +10,7 @@
           </div>
 
           <div class="card-booking-infos">
-            <h5><%= booking.country.name %></h5>
+            <h5><%= link_to booking.country.name, booking_path(booking) %></h5>
             <p><%= booking.start_date %> - <%= booking.end_date %></p>
           </div>
 
