--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -1,6 +1,4 @@
-<div class="container">
-
-  <%= simple_form_for (country) do |f| %>
+<%= simple_form_for(country) do |f| %>
   <%= f.input :name %>
   <%= f.input :price %>
   <%= f.input :tag_line %>
@@ -8,8 +6,5 @@
   <%= f.input :main_language %>
   <%= f.submit class: "btn btn-primary" %>
 <% end %>
-<%= link_to "Cancel", countries_path, class: "btn btn-secondary"%>
 
-</div>
-
-  </div>
+<%= link_to "Cancel", countries_path, class: "btn btn-secondary mt-4" %>
