--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -10,5 +10,5 @@
 // Your CSS partials
 @import "components/index";
 @import "pages/index";
-@import "flatpickr/dist/flatpickr.min.css";
+// @import "flatpickr/dist/flatpickr.min.css";
 @import "components/my_bookings_card";
