--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,7 +7,14 @@
 
     <div class="d-flex gap-4">
       <%= link_to "Home", root_path, class: "nav-link" %>
-      <%= link_to "Log out", destroy_user_session_path, method: :delete, class: "nav-link" %>
+      <%= link_to "List Country", new_country_path, class: "nav-link" %>
+      <%= link_to "My Bookings", bookings_path, class: "nav-link" %>
+      <% if user_signed_in? %>
+      <%= link_to "Log Out", destroy_user_session_path, data: { turbo_method: :delete}, class: "nav-link" %>
+      <% else %>
+        <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
+        <%= link_to "Log In", new_user_session_path, class: "nav-link" %>
+      <% end %>
     </div>
   </div>
 </div>
