--- a/app/views/countries/new.html.erb
+++ b/app/views/countries/new.html.erb
@@ -1,4 +1,9 @@
 <div class="container mt-4">
+  <div class="text-center mb-5">
   <h1>Create a country </h1>
+  </div>
+  <div class="formbox">
     <%= render "form", country: @country%>
+  </div>
+
 </div>
