--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -12,3 +12,4 @@
 @import "pages/index";
 // @import "flatpickr/dist/flatpickr.min.css";
 @import "components/my_bookings_card";
+@import "components/photo_preview";
