--- a/app/assets/stylesheets/components/_form_new_edit_countries.scss
+++ b/app/assets/stylesheets/components/_form_new_edit_countries.scss
@@ -3,19 +3,30 @@
 }
 
 .formbox{
-  // border: 1px solid grey;
-  box-shadow: 1px 1px 1px 2px rgba(219, 217, 217, 0.587);
+  width: 100%;
+  box-shadow: 1px 1px 1px 2px rgba(140, 140, 140, 0.367);
   padding-bottom: 20px;
   border-radius: 5px;
+  background-color: white;
 
 }
 
+
 .bottominfo {
-  width: 85%;
+  width: 70%;
   margin: 20px auto;
 }
 
 .simple_form .row{
   width: 75%;
   margin: auto;
+}
+
+.photoupload {
+  width: 70%;
+  margin: auto;
+}
+
+input {
+  box-shadow: 1px 1px 1px 2px rgba(140, 140, 140, 0.367);
 }
