--- a/app/views/countries/new.html.erb
+++ b/app/views/countries/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container mt-4" style=width:700px;>
+<div class="container mt-4" style="width: 700px;">
   <div class="text-center mb-5">
   <h1>Create a country </h1>
   </div>
