--- a/app/views/countries/_form.html.erb
+++ b/app/views/countries/_form.html.erb
@@ -19,7 +19,7 @@
     <%= f.input :description, input_html: { class: "form-control", placeholder: "What makes your country great?" }%>
   </div>
 
- <div data-controller="photo-preview" class="photoupload">
+  <div data-controller="photo-preview" class="photoupload">
     <%= f.label :photos %>
     <%= f.file_field :photos,
           multiple: true,
@@ -43,7 +43,7 @@
       <%= link_to "Cancel", countries_path %>
     </div>
     <div class="col">
-      <%= f.submit "List country", class: "btn btn-outline-primary" %>
+      <%= f.submit "Done", class: "btn btn-outline-primary" %>
     </div>
     <div class="col"><!-- empty --></div>
   </div>
