styling for booking show page, missing carrousel

--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -1,42 +1,49 @@
-<div class="container text-center mt-4 mb-5">
+<div class="container mt-4 mb-5">
 
-  <div class="mb-4">
+  <div class="confirmation">
     <h1>Booking Confirmation for <%= @booking.country.name %></h1>
-    <h3><%= @booking.country.tag_line %></h3>
+    <div class="booking-details"> <!-- Booking details -->
+      <div class="dateinfo">
+        <p id="checkin"><strong>Check-in:</strong> <%= @booking.start_date %></p>
+        <p><strong>Check-out:</strong> <%= @booking.end_date %></p>
+        <p id="nights"> Number of nights: <%= @booking.nights %></p>
+      </div>
+      <div class="priceinfo">
+        <p id="pricenight"><strong>Price per night:</strong> <%= number_to_currency(@booking.country.price, unit: "£", separator: ",", delimiter: ".") %></p>
+        <p><strong>Total Price:</strong> <%= number_to_currency(@booking.total_price, unit: "£", separator: ",", delimiter: ".")%></p>
+      </div>
+    </div>
   </div>
 
-  <div class="row justify-content-center gx-5 text-start mb-4">
-    <div class="col-md-5">
-      <h2>Booking Details</h2>
-      <p><strong>Check-in:</strong> <%= @booking.start_date %></p>
-      <p><strong>Check-out:</strong> <%= @booking.end_date %></p>
-      <p><strong>Price per night:</strong> $<%= @booking.country.price %></p>
-      <p><strong>Number of nights:</strong> <%= @booking.nights %></p>
-      <p><strong>Total Price:</strong> $<%= @booking.total_price %></p>
-    </div>
-
-    <div class="col-md-5">
+  <div class="row justify-content-center gx-5 mt-4 mb-4">
+    <div class="col-md-5" id="countrydetails"> <!-- Country details -->
       <h2>Country Details</h2>
       <p><strong>Name:</strong> <%= @booking.country.name %></p>
       <p><strong>Description:</strong> <%= @booking.country.description %></p>
       <p><strong>Main Language:</strong> <%= @booking.country.main_language %></p>
     </div>
+    <!-- Carrousel images -->
+    <div class="col-md-5">
+      <img src="https://uniqsurface.com/wp-content/uploads/2022/05/uniq-surface-paragliding-map-awesome-maps_800x600.jpg"
+          class="img-fluid"
+          alt="Country Image"
+          style="width: 500px;">
+    </div>
   </div>
 
-  <div class="d-flex justify-content-center mb-4">
-    <img src="https://uniqsurface.com/wp-content/uploads/2022/05/uniq-surface-paragliding-map-awesome-maps_800x600.jpg"
-         class="img-fluid"
-         alt="Country Image"
-         style="width: 500px;">
-  </div>
 
-  <div class="mb-3">
-    <%= link_to "Back to Countries", countries_path, class: "btn btn-secondary" %>
+  <!-- Map View -->
+  <div class="d-flex justify-content-center">
+    <div id="map-show-booking"
+     data-controller="map"
+     data-map-markers-value="<%= [@markers].to_json %>"
+     data-map-api-key-value="<%= ENV['pk.eyJ1IjoibWlnejIyMDUiLCJhIjoiY21hemc4ZzJiMGJzcjJsc2Fxdm83MDdweiJ9.yu0zSvl3tEeW55Rw9wjFjA'] %>"
+     style="width: 65%; height: 400px;">
+    </div>
+    <div id="thankyou">
+      <h2>Thank you for your booking!</h2>
+      <p>We look forward to welcoming you to <%= @booking.country.name %>.</p>
+       <%= link_to "Back to Countries", countries_path, class: "btn btn-secondary" %>
+    </div>
   </div>
-
-  <div>
-    <h2>Thank you for your booking!</h2>
-    <p>We look forward to welcoming you to <%= @booking.country.name %>.</p>
-  </div>
-
 </div>
