--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -4,6 +4,7 @@
 @import "form_legend_clear";
 @import "navbar";
 @import "form_new_edit_countries";
+@import "bookingconfirm";
 
 body {
   background-color: whitesmoke;
