--- a/app/assets/stylesheets/components/photo_preview.scss
+++ b/app/assets/stylesheets/components/photo_preview.scss
@@ -1,3 +1,30 @@
-.preview-wrapper button:hover {
-  background: rgba(255, 0, 0, 0.7);
+.preview-wrapper {
+  position: relative;
+  display: inline-block;
+  margin: 10px;
+}
+
+.preview-image {
+  max-height: 100px;
+  border-radius: 6px;
+}
+
+.remove-image-btn {
+  position: absolute;
+  top: 2px;
+  right: 4px;
+  background: #fff;
+  border: none;
+  font-size: 18px;
+  line-height: 1;
+  cursor: pointer;
+  padding: 0 6px;
+  border-radius: 50%;
+}
+.upload-progress {
+  height: 4px;
+  background-color: #0d6efd;
+  width: 0%;
+  margin-top: 4px;
+  border-radius: 3px;
 }
