--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,2 +1,18 @@
 // Import page-specific CSS files here.
 @import "home";
+#main-view {
+  height: 100%;
+}
+
+#map-section {
+  position: relative;
+}
+
+#map {
+  width: 100%;
+  height: 100%;
+}
+.card:hover {
+  transform: scale(1.02);
+  transition: 0.2s ease-in-out;
+}
