--- a/app/assets/stylesheets/config/_colors.scss
+++ b/app/assets/stylesheets/config/_colors.scss
@@ -1,5 +1,9 @@
 // Define variables for your color scheme
-
+$deepblue :#006895;
+$seablue :#0799ba;
+$aqua :#1fa5b0;
+$foam :#8ec1b8;
+$sand :#dfdcd3;
 // For example:
 $red: #FD1015;
 $blue: #0D6EFD;
