--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -3,6 +3,7 @@
   margin: auto;
   border-radius: 8px;
   overflow: hidden;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.200);
 }
 
 .carousel-image-wrapper {
