--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -2,8 +2,10 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  background-color: rgb(110, 110, 110);
-  padding: 0.5rem 1rem;
+  background-color: $deepblue;
+  padding: 4px 8px;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.200);
+  border-bottom: solid rgba(0, 0, 0, 0.200) 1px;
 
   .navbar-brand {
     display: flex;
@@ -11,26 +13,28 @@
     gap: 0.5rem;
 
     img {
-      width: 40px;
+      width: 100px;
       height: auto;
       object-fit: contain;
     }
 
-    h2 {
-      color: $light-gray;
+    h4 {
+      color: white;
       margin: 0;
-      font-size: 1.5rem;
+      font-size: 30px;
+      font-weight: 200;
     }
   }
 
   .nav-link {
+    font-size: 18px;
     color: $light-gray;
     font-weight: 500;
     text-decoration: none;
-    padding: 0.5rem 1rem;
+    padding:4px 8px;
 
     &:hover {
-      color: rgb(255, 217, 28);
+      color: $sand;
     }
   }
 }
