--- a/app/views/countries/show.html.erb
+++ b/app/views/countries/show.html.erb
@@ -1,27 +1,29 @@
-<div class="container mt-4">
-  <%= render "shared/carousel" %>
-
-  <div class="country-info fluid mx-auto d-block w-50">
-    <h1><%= @country.name %></h1>
-    <h3><%= @country.tag_line %></h3>
-    <p>Price: <%= @country.price %> / night</p>
-    <p>Description: <%= @country.description %></p>
-    <p>Main language: <%= @country.main_language %></p>
-
-    <div class="mt-4" data-controller="daterange">
-  <%= form_with model: [@country, @booking || @country.bookings.new] do |f| %>
-
-    <!-- Hidden or readonly inputs for start_date and end_date -->
-    <%= f.hidden_field :start_date, id: "start-date" %>
-    <%= f.hidden_field :end_date, id: "end-date" %>
-
-    <!-- Inline calendar container -->
-    <div id="inline-calendar" data-daterange-target="calendar"></div>
-
-    <%= f.submit "Book Now", class: "btn btn-primary mt-4" %>
-  <% end %>
-</div>
+<div class="container mt-5">
+  <div class="row">
+    <div class="col-md-6">
+      <div class="country-info">
+        <h1><%= @country.name %></h1>
+        <h3><%= @country.tag_line %></h3>
+        <p>Price: <%= @country.price %> / night</p>
+        <p>Description: <%= @country.description %></p>
+        <p>Main language: <%= @country.main_language %></p>
 
 
+        <div class="mt-4" data-controller="daterange">
+          <%= form_with model: [@country, @booking || @country.bookings.new] do |f| %>
+            <%= f.hidden_field :start_date, id: "start-date" %>
+            <%= f.hidden_field :end_date, id: "end-date" %>
+
+            <div id="inline-calendar" data-daterange-target="calendar"></div>
+
+            <%= f.submit "Book Now", class: "btn btn-primary mt-4" %>
+          <% end %>
+        </div>
+      </div>
+    </div>
+
+    <div class="col-md-6 carousel">
+      <%= render "shared/carousel" %>
+    </div>
   </div>
 </div>
