--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,7 @@
 <div class="navbar navbar-light navbar-lewagon">
   <div class="container-fluid d-flex justify-content-between align-items-center w-100">
     <%= link_to root_path, class: "navbar-brand d-flex align-items-center gap-2" do %>
-      <%= image_tag "logo_mark", alt: "Logo", height: 50 %>
+      <%= image_tag "logo_mark.png", alt: "Logo", height: 50 %>
       <h4><strong>Air</strong><strong>C</strong>n<strong>C</strong></h4>
     <% end %>
 
