--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,7 +5,4 @@
 @import "navbar";
 @import "form_new_edit_countries";
 @import "bookingconfirm";
-
-body {
-  background-color: whitesmoke;
-}
+@import "footer";
