--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -7,10 +7,13 @@
 
     <div class="d-flex gap-4">
       <%= link_to "Home", root_path, class: "nav-link" %>
-      <%= link_to "List Country", new_country_path, class: "nav-link" %>
-      <%= link_to "My Bookings", bookings_path, class: "nav-link" %>
       <% if user_signed_in? %>
-      <%= link_to "Log Out", destroy_user_session_path, data: { turbo_method: :delete}, class: "nav-link" %>
+          <%= image_tag "https://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { bs_toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+            <div class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
+              <%= link_to "List Country", new_country_path, class: "dropdown-item" %>
+              <%= link_to "My Bookings", bookings_path, class: "dropdown-item" %>
+              <%= link_to "Log out", destroy_user_session_path, class: "dropdown-item", data: {turbo_method: :delete} %>
+            </div>
       <% else %>
         <%= link_to "Sign Up", new_user_registration_path, class: "nav-link" %>
         <%= link_to "Log In", new_user_session_path, class: "nav-link" %>
