--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -16,3 +16,16 @@
   height: 100%;
   object-fit: cover;
 }
+
+.carousel-item {
+  height: 400px;
+}
+
+.carousel-image-wrapper img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+
