--- a/app/assets/stylesheets/pages/_show_country.scss
+++ b/app/assets/stylesheets/pages/_show_country.scss
@@ -1,9 +1,12 @@
-.carousel {
-  max-width: 800px;
-}
-
-.daterange {
-  .btn {
-    color: $sand;
-  }
+.main-container {
+  display: flex;
+  background-color: white;
+  padding-bottom: 20px;
+  margin-top: 26px;
+  margin-bottom:26px;
+  margin-left: auto;
+  margin-right: auto;
+  max-width: 1500px;
+  border-radius: 8px;
+  box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.207);
 }
